--- a/biografie.html
+++ b/biografie.html
@@ -14,13 +14,15 @@
       <li class="link"><a href="bekend door.html">bekend door</a></li>
       <li class="link"><a href="contact.html">contact</a></li>
     </ul>
-    <br>
-    <br>
-    <p class="biografie">Wozniak is Pools-Amerikaans en werd geboren als oudste van de drie kinderen van de Amerikaanse ingenieur Jerry Wozniak (die bij Lockheed werkte[1]) en Margaret Kern.[2] Hij groeide op in Sunnyvale en leerde op de middelbare school Steve Jobs kennen. Ze werden daar een beetje tot de nerds gerekend omdat ze allebei veel belangstelling voor elektronica hadden. Wozniak maakte onder andere een apparaatje om gratis te telefoneren in een gewone telefooncel, een zogeheten blue box.</p>
-    <p>Na de middelbare school gingen ze beiden bij computerbedrijven in Silicon Valley werken: Wozniak bij Hewlett-Packard en Jobs bij Atari. Ze bleven contact houden en ondertussen behaalde Wozniak zijn graad in computertechniek aan de Universiteit van Berkeley.</p>
-    <p>Wozniak was in de begintijd van Apple de technicus van het bedrijf. Hij was verantwoordelijk voor de eerste versies van het besturingssysteem en de hardware van de Apple I en de beroemde Apple II, de eerste echte pc die tot de komst van de Commodore 64 de succesvolste pc zou zijn.</p>
-    <p>Wozniak is ook de oprichter van het US Festival, dat in 1982 en 1983 werd gehouden.</p>
-    <p>Wozniak verliet Apple in 1983 (maar bleef grootaandeelhouder) en werkte daarna een aantal jaren als basisschoolleraar. Hij kwam in 1999 voor in de film Pirates of Silicon Valley,[3][4] waarin hij als verteller verbeeld werd en werd gespeeld door de acteur Joey Slotnick (die hij later ook ontmoette).</p>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101432.04138505488!2d-122.09390822611785!3d37.39571354481628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb645a9d05d3b%3A0x768dfb26dd7cc3a2!2sSunnyvale%2C%20Californi%C3%AB%2C%20Verenigde%20Staten!5e0!3m2!1snl!2snl!4v1632470644723!5m2!1snl!2snl" width="600" height="450" align="right" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div id="biografie">
+      <br>
+      <p id="biografie">Wozniak is Pools-Amerikaans en werd geboren als oudste van de drie kinderen van de Amerikaanse ingenieur Jerry Wozniak (die bij Lockheed werkte[1]) en Margaret Kern.[2] Hij groeide op in Sunnyvale en leerde op de middelbare school Steve Jobs kennen. Ze werden daar een beetje tot de nerds gerekend omdat ze allebei veel belangstelling voor elektronica hadden. Wozniak maakte onder andere een apparaatje om gratis te telefoneren in een gewone telefooncel, een zogeheten blue box.</p>
+      <p id="biografie">Na de middelbare school gingen ze beiden bij computerbedrijven in Silicon Valley werken: Wozniak bij Hewlett-Packard en Jobs bij Atari. Ze bleven contact houden en ondertussen behaalde Wozniak zijn graad in computertechniek aan de Universiteit van Berkeley.</p>
+      <p id="biografie">Wozniak was in de begintijd van Apple de technicus van het bedrijf. Hij was verantwoordelijk voor de eerste versies van het besturingssysteem en de hardware van de Apple I en de beroemde Apple II, de eerste echte pc die tot de komst van de Commodore 64 de succesvolste pc zou zijn.</p>
+      <p id="biografie">Wozniak is ook de oprichter van het US Festival, dat in 1982 en 1983 werd gehouden.</p>
+      <p id="biografie">Wozniak verliet Apple in 1983 (maar bleef grootaandeelhouder) en werkte daarna een aantal jaren als basisschoolleraar. Hij kwam in 1999 voor in de film Pirates of Silicon Valley,[3][4] waarin hij als verteller verbeeld werd en werd gespeeld door de acteur Joey Slotnick (die hij later ook ontmoette).</p>
+      <iframe id="kaart"src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d101432.04138505488!2d-122.09390822611785!3d37.39571354481628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb645a9d05d3b%3A0x768dfb26dd7cc3a2!2sSunnyvale%2C%20Californi%C3%AB%2C%20Verenigde%20Staten!5e0!3m2!1snl!2snl!4v1632470644723!5m2!1snl!2snl" width="600" height="450" align="right" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <br>
+    </div>
   </body>
 </html>
