--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,9 @@
     <br>
     <br>
     <p> hij heeft 2 e-mails:<br>inquiry@woz.org.<br>teamwoz@woz.org.</p>
-    <a class="contact" href="http://www.woz.org/">dit is zijn website</a>
+    <a id="contact" href="http://www.woz.org/">dit is zijn website</a>
     <br>
-    <a class="contact"  href="https://twitter.com/stevewoz">hij heeft ook een twitter</a>
+    <a id="contact"  href="https://twitter.com/stevewoz">hij heeft ook een twitter</a>
     <p>dit is zijn school:</p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12597.687154014211!2d-122.2590219!3d37.8738176!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xeb39107435e58692!2sUC%20Berkeley%20College%20of%20Engineering!5e0!3m2!1snl!2snl!4v1632726401052!5m2!1snl!2snl" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </body>
