--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <title>eindproject-start</title>
+    <title>eindproject-index</title>
   </head>
   <body>
     <ul>
@@ -15,19 +15,20 @@
       <li class="link"><a href="contact.html">contact</a></li>
     </ul>
     <br>
-    <h1> Steve Wozniak </h1>
-    <p>
-      Dit is mijn eindopdracht voor htmlcss-1. Ik heb de informatie en de plaatjes uit mijn eindproject van htmlcss-0.
-    </p>
-    <p>
-      Deze pagina gaat over Steve Wozniak. Hij is één van de makers van apple. Wissel tussen de pagina's met het menu hier boven.
-    </p>
-    <div id="rij">
-      <div id="colom">
-        <img id="a"src="https://quotepark.com/media/authors/steve-wozniak.detail.jpeg">
-      </div>
-      <div id="colom">
-        <img id="b"src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Apple-logo.png">
+    <div id="pagina">
+      <h1> Steve Wozniak </h1>
+      <p>
+        Dit is mijn eindopdracht voor htmlcss-1. Ik heb de informatie en de plaatjes uit mijn eindproject van htmlcss-0.
+        <br>
+        Deze pagina gaat over Steve Wozniak. Hij is één van de makers van apple. Wissel tussen de pagina's met het menu hier boven.
+      </p>
+      <div id="rij">
+        <div id="colom">
+          <img id="a"src="https://quotepark.com/media/authors/steve-wozniak.detail.jpeg">
+        </div>
+        <div id="colom">
+          <img id="b"src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Apple-logo.png">
+        </div>
       </div>
     </div>
   </body>
